#179459: introducing ErrorsCache that allows to easily implement error badging.